# messages-classification-api

./: .env.example  .gitignore  api.py  dataset_combined.csv  dataset_combined_malay.csv  dataset_malay.csv  predict.py  pyproject.toml  train.py
src/: __init__.py  config.py  dataset.py  dependencies.py  model.py
